Corrected issue with days method where formula would break on the next calendar date

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1344,25 +1344,16 @@ h4.text-center {
     background-color: transparent;
 }
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    /* Set the fixed height of the footer here */
-    height: 60px;
-    line-height: 60px; /* Vertically center the text there */
-    background: #007bff;
-    background: linear-gradient(to right, #0062E6, #33AEFF);
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: 'Numans', sans-serif;
-    z-index: 10;
-}
+
 
 .row {
     margin-right: 0px;
     margin-left: 0px;
 }
+
+
+
+
 
 /*
 	Hack to remove background from Mobile Safari.
